添加spring cloud 相关项目demo

--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -6,7 +6,6 @@
 		<groupId>com.aubrey</groupId>
 		<artifactId>parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.aubrey</groupId>
 	<artifactId>provider</artifactId>
@@ -31,6 +30,12 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+
+		<!--调用链追踪-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
 	</dependencies>
 
