--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-server.port=8002
-spring.application.name=consumer
+server.port: 8100
+spring.application.name: consumer
 eureka.client.service-url.defaultZone: http://localhost:8000/eureka/
+
+
+#zipkin
+spring.zipkin.base-url=http://localhost:9411
