--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,13 @@
 	<modules>
 		<module>eureka-server</module>
 		<module>provider</module>
+		<module>provider2</module>
+		<module>provider3</module>
 		<module>consumer</module>
+		<module>config-client</module>
+		<module>config-server</module>
+		<module>config-server2</module>
+		<module>service-zuul</module>
 	</modules>
 
 
