--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-server.port=8001
-spring.application.name=provider
+server.port: 8001
+spring.application.name: provider
 eureka.client.service-url.defaultZone: http://localhost:8000/eureka/
+
+#zipkin
+spring.zipkin.base-url=http://localhost:9411
